tests/NormalTests/paczka1/small_fuzzy/89585590.err
Error in line 2: Zq2Hcn6rR A950 37,6
Error in line 3: TmKpm4n A950 66,9
Error in line 5: TmKpm4n S934 21,3
